--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 PORT=8001
-MONGO_URI=mongodb+srv://githubenard:Wnhee*PBt7yVF_R@cluster0.z14yz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://githubenard:Wnhee*PBt7yVF_R@cluster0.z14yz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/dolce_Bakers
